--- a/web/package.json
+++ b/web/package.json
@@ -1,16 +1,20 @@
 {
   "name": "BTransportWeb",
   "version": "0.0.1",
+  "license": "Apache License 2.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.0"
+    "vue": "^3.2.0",
+    "vue-i18n": "9",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vitepress": "^1.5.0"
   }
 }
