--- a/website/package.json
+++ b/website/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "metro-website",
+  "name": "BTransport-website",
   "private": true,
-  "version": "0.0.0",
+  "version": "Beta-0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
