--- a/website/package.json
+++ b/website/package.json
@@ -64,6 +64,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.2",
+    "terser": "^5.39.0",
     "typescript": "^5.7.3",
     "vite": "^6.0.5",
     "vite-plugin-checker": "^0.9.0",
