--- a/website/package.json
+++ b/website/package.json
@@ -4,70 +4,34 @@
   "version": "Beta-0.1.0",
   "type": "module",
   "scripts": {
-    "prepare": "husky install",
-    "lint": "eslint .",
-    "format": "prettier --write .",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "type-check": "tsc --noEmit"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,css,scss,less,md}": [
-      "prettier --write"
-    ],
-    "*.{html}": [
-      "prettier --write"
-    ]
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/icons": "^5.6.0",
-    "@loadable/component": "^5.16.4",
-    "@reduxjs/toolkit": "^2.6.0",
     "antd": "^5.23.2",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.2",
-    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.0.12",
     "react-i18next": "^15.4.0",
-    "react-loading-skeleton": "^3.5.0",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
-    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.25.0",
-    "@typescript-eslint/parser": "^8.25.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
-    "eslint-config-prettier": "^10.0.2",
-    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.4.3",
-    "prettier": "^3.5.2",
-    "terser": "^5.39.0",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.5",
-    "vite-plugin-checker": "^0.9.0",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite": "^6.0.5"
   }
 }
