--- a/website/package.json
+++ b/website/package.json
@@ -68,6 +68,7 @@
     "typescript": "^5.7.3",
     "vite": "^6.0.5",
     "vite-plugin-checker": "^0.9.0",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-svgr": "^4.3.0"
   }
 }
